Outros/ine5426_rafael-lucena/Compiladores/FINAL/output/javaxParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 /home/cesar/UFSC/Compiladores/FINAL/javax.g 2011-05-12 20:13:02

	package Tools;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;

import org.antlr.runtime.tree.*;

public class javaxParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "SEMI", "NAME", "ASSIGN", "COMMA", "LPAREN", "RPAREN", "DOSTAT", "ENDSTAT", "IFSTAT", "THENSTAT", "ELSEIFSTAT", "ELSESTAT", "FORSTAT", "INSTAT", "REPEATSTAT", "UNTILSTAT", "CHESTSTAT", "WITHSTAT", "TYPE", "DOT", "RETURNSTAT", "PLUS", "MINUS", "STAR", "SLASH", "PERCENT", "POWER", "LESS", "TO", "LESSEQUAL", "GREATER", "GREATEREQUAL", "EQUAL", "AND", "OR", "NOTEQUAL", "NOT", "INT", "FLOAT", "HEX", "NORMALSTRING", "LBRACK", "RBRACK", "COLON", "LCURLY", "RCURLY", "EscapeSequence", "WS", "COMMENT", "LINE_COMMENT", "'false'", "'true'"
    };
    public static final int EOF=-1;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int SEMI=4;
    public static final int NAME=5;
    public static final int ASSIGN=6;
    public static final int COMMA=7;
    public static final int LPAREN=8;
    public static final int RPAREN=9;
    public static final int DOSTAT=10;
    public static final int ENDSTAT=11;
    public static final int IFSTAT=12;
    public static final int THENSTAT=13;
    public static final int ELSEIFSTAT=14;
    public static final int ELSESTAT=15;
    public static final int FORSTAT=16;
    public static final int INSTAT=17;
    public static final int REPEATSTAT=18;
    public static final int UNTILSTAT=19;
    public static final int CHESTSTAT=20;
    public static final int WITHSTAT=21;
    public static final int TYPE=22;
    public static final int DOT=23;
    public static final int RETURNSTAT=24;
    public static final int PLUS=25;
    public static final int MINUS=26;
    public static final int STAR=27;
    public static final int SLASH=28;
    public static final int PERCENT=29;
    public static final int POWER=30;
    public static final int LESS=31;
    public static final int TO=32;
    public static final int LESSEQUAL=33;
    public static final int GREATER=34;
    public static final int GREATEREQUAL=35;
    public static final int EQUAL=36;
    public static final int AND=37;
    public static final int OR=38;
    public static final int NOTEQUAL=39;
    public static final int NOT=40;
    public static final int INT=41;
    public static final int FLOAT=42;
    public static final int HEX=43;
    public static final int NORMALSTRING=44;
    public static final int LBRACK=45;
    public static final int RBRACK=46;
    public static final int COLON=47;
    public static final int LCURLY=48;
    public static final int RCURLY=49;
    public static final int EscapeSequence=50;
    public static final int WS=51;
    public static final int COMMENT=52;
    public static final int LINE_COMMENT=53;

    // delegates
    // delegators

    public static final String[] ruleNames = new String[] {
        "invalidRule", "chunk", "number", "arglist", "defchest", "expr", 
        "defrepeat", "unop", "defreturn", "chestaccess", "typedarglist", 
        "deffunc", "binop", "vardecl", "string", "block", "weakstat", "funccall", 
        "deffor", "type", "stat", "varatrib", "defif"
    };
    public static final boolean[] decisionCanBacktrack = new boolean[] {
        false, // invalid decision
        false, false, false, false, false, false, false, false, false, false, 
            false, false, false, false, false, false, false
    };

     
        public int ruleLevel = 0;
        public int getRuleLevel() { return ruleLevel; }
        public void incRuleLevel() { ruleLevel++; }
        public void decRuleLevel() { ruleLevel--; }
        public javaxParser(TokenStream input) {
            this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
        }
        public javaxParser(TokenStream input, int port, RecognizerSharedState state) {
            super(input, state);
            DebugEventSocketProxy proxy =
                new DebugEventSocketProxy(this,port,adaptor);
            setDebugListener(proxy);
            setTokenStream(new DebugTokenStream(input,proxy));
            try {
                proxy.handshake();
            }
            catch (IOException ioe) {
                reportError(ioe);
            }
            TreeAdaptor adap = new CommonTreeAdaptor();
            setTreeAdaptor(adap);
            proxy.setTreeAdaptor(adap);
        }
    public javaxParser(TokenStream input, DebugEventListener dbg) {
        super(input, dbg);

         
        TreeAdaptor adap = new CommonTreeAdaptor();
        setTreeAdaptor(adap);

    }
    protected boolean evalPredicate(boolean result, String predicate) {
        dbg.semanticPredicate(result, predicate);
        return result;
    }

    protected DebugTreeAdaptor adaptor;
    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = new DebugTreeAdaptor(dbg,adaptor);

    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }


    public String[] getTokenNames() { return javaxParser.tokenNames; }
    public String getGrammarFileName() { return "/home/cesar/UFSC/Compiladores/FINAL/javax.g"; }


    public static class chunk_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "chunk"
    // /home/cesar/UFSC/Compiladores/FINAL/javax.g:22:1: chunk : ( stat ( SEMI )? )+ ;
    public final javaxParser.chunk_return chunk() throws RecognitionException {
        javaxParser.chunk_return retval = new javaxParser.chunk_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token SEMI2=null;
        javaxParser.stat_return stat1 = null;


        Object SEMI2_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "chunk");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(22, 1);

        try {
            // /home/cesar/UFSC/Compiladores/FINAL/javax.g:22:7: ( ( stat ( SEMI )? )+ )
            dbg.enterAlt(1);

            // /home/cesar/UFSC/Compiladores/FINAL/javax.g:22:9: ( stat ( SEMI )? )+
            {
            root_0 = (Object)adaptor.nil();

            dbg.location(22,9);
            // /home/cesar/UFSC/Compiladores/FINAL/javax.g:22:9: ( stat ( SEMI )? )+
            int cnt2=0;
            try { dbg.enterSubRule(2);

            loop2:
            do {
                int alt2=2;
                try { dbg.enterDecision(2, decisionCanBacktrack[2]);

                int LA2_0 = input.LA(1);

                if ( (LA2_0==NAME||LA2_0==IFSTAT||LA2_0==FORSTAT||LA2_0==REPEATSTAT||LA2_0==CHESTSTAT||LA2_0==TYPE||LA2_0==RETURNSTAT) ) {
                    alt2=1;
                }


                } finally {dbg.exitDecision(2);}

                switch (alt2) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/cesar/UFSC/Compiladores/FINAL/javax.g:22:10: stat ( SEMI )?
            	    {
            	    dbg.location(22,10);
            	    pushFollow(FOLLOW_stat_in_chunk55);
            	    stat1=stat();

            	    state._fsp--;

            	    adaptor.addChild(root_0, stat1.getTree());
            	    dbg.location(22,15);
            	    // /home/cesar/UFSC/Compiladores/FINAL/javax.g:22:15: ( SEMI )?
            	    int alt1=2;
            	    try { dbg.enterSubRule(1);
            	    try { dbg.enterDecision(1, decisionCanBacktrack[1]);

            	    int LA1_0 = input.LA(1);

            	    if ( (LA1_0==SEMI) ) {
            	        alt1=1;
            	    }
            	    } finally {dbg.exitDecision(1);}

            	    switch (alt1) {
            	        case 1 :
            	            dbg.enterAlt(1);

            	            // /home/cesar/UFSC/Compiladores/FINAL/javax.g:22:16: SEMI
            	            {
            	            dbg.location(22,16);
            	            SEMI2=(Token)match(input,SEMI,FOLLOW_SEMI_in_chunk58); 
            	            SEMI2_tree = (Object)adaptor.create(SEMI2);
            	            adaptor.addChild(root_0, SEMI2_tree);


            	            }
            	            break;

            	    }
            	    } finally {dbg.exitSubRule(1);}


            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        dbg.recognitionException(eee);

                        throw eee;
                }
                cnt2++;
            } while (true);
            } finally {dbg.exitSubRule(2);}


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(22, 24);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "chunk");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "chunk"

    public static class stat_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "stat"
    // /home/cesar/UFSC/Compiladores/FINAL/javax.g:24:1: stat : ( weakstat | deffunc | defchest );
    public final javaxParser.stat_return stat() throws RecognitionException {
        javaxParser.stat_return retval = new javaxParser.stat_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        javaxParser.weakstat_return weakstat3 = null;

        javaxParser.deffunc_return deffunc4 = null;

        javaxParser.defchest_return defchest5 = null;



        try { dbg.enterRule(getGrammarFileName(), "stat");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(24, 1);

        try {
            // /home/cesar/UFSC/Compiladores/FINAL/javax.g:24:6: ( weakstat | deffunc | defchest )
            int alt3=3;
            try { dbg.enterDecision(3, decisionCanBacktrack[3]);

            switch ( input.LA(1) ) {
            case NAME:
                {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==ASSIGN||LA3_1==LPAREN||LA3_1==DOT) ) {
                    alt3=1;
                }
                else if ( (LA3_1==NAME) ) {
                    int LA3_5 = input.LA(3);

                    if ( (LA3_5==LPAREN) ) {
                        alt3=2;
                    }
                    else if ( (LA3_5==SEMI||LA3_5==COMMA) ) {
                        alt3=1;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 3, 5, input);

                        dbg.recognitionException(nvae);
                        throw nvae;
                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    dbg.recognitionException(nvae);
                    throw nvae;
                }
                }
                break;
            case TYPE:
                {
                int LA3_2 = input.LA(2);

                if ( (LA3_2==NAME) ) {
                    int LA3_5 = input.LA(3);

                    if ( (LA3_5==LPAREN) ) {
                        alt3=2;
                    }
                    else if ( (LA3_5==SEMI||LA3_5==COMMA) ) {
                        alt3=1;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 3, 5, input);

                        dbg.recognitionException(nvae);
                        throw nvae;
                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 2, input);

                    dbg.recognitionException(nvae);
                    throw nvae;
                }
                }
                break;
            case IFSTAT:
            case FORSTAT:
            case REPEATSTAT:
            case RETURNSTAT:
                {
                alt3=1;
                }
                break;
            case CHESTSTAT:
                {
                alt3=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }

            } finally {dbg.exitDecision(3);}

            switch (alt3) {
                case 1 :
                    dbg.enterAlt(1);

                    // /home/cesar/UFSC/Compiladores/FINAL/javax.g:24:9: weakstat
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(24,9);
                    pushFollow(FOLLOW_weakstat_in_stat71);
                    weakstat3=weakstat();

                    state._fsp--;

                    adaptor.addChild(root_0, weakstat3.getTree());

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /home/cesar/UFSC/Compiladores/FINAL/javax.g:25:2: deffunc
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(25,2);
                    pushFollow(FOLLOW_deffunc_in_stat76);
                    deffunc4=deffunc();

                    state._fsp--;

                    adaptor.addChild(root_0, deffunc4.getTree());

                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // /home/cesar/UFSC/Compiladores/FINAL/javax.g:26:2: defchest
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(26,2);
                    pushFollow(FOLLOW_defchest_in_stat83);
                    defchest5=defchest();

                    state._fsp--;

                    adaptor.addChild(root_0, defchest5.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(26, 10);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "stat");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "stat"

    public static class weakstat_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "weakstat"
    // /home/cesar/UFSC/Compiladores/FINAL/javax.g:28:1: weakstat : ( varatrib SEMI | vardecl SEMI | funccall SEMI | defif | deffor | defreturn SEMI | chestaccess SEMI | defrepeat );
    public final javaxParser.weakstat_return weakstat() throws RecognitionException {
        javaxParser.weakstat_return retval = new javaxParser.weakstat_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token SEMI7=null;
        Token SEMI9=null;
        Token SEMI11=null;
        Token SEMI15=null;
        Token SEMI17=null;
        javaxParser.varatrib_return varatrib6 = null;

        javaxParser.vardecl_return vardecl8 = null;

        javaxParser.funccall_return funccall10 = null;

        javaxParser.defif_return defif12 = null;

        javaxParser.deffor_return deffor13 = null;

        javaxParser.defreturn_return defreturn14 = null;

        javaxParser.chestaccess_return chestaccess16 = null;

        javaxParser.defrepeat_return defrepeat18 = null;


        Object SEMI7_tree=null;
        Object SEMI9_tree=null;
        Object SEMI11_tree=null;
        Object SEMI15_tree=null;
        Object SEMI17_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "weakstat");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(28, 1);

        try {
            // /home/cesar/UFSC/Compiladores/FINAL/javax.g:28:10: ( varatrib SEMI | vardecl SEMI | funccall SEMI | defif | deffor | defreturn SEMI | chestaccess SEMI | defrepeat )
            int alt4=8;
            try { dbg.enterDecision(4, decisionCanBacktrack[4]);

            try {
                isCyclicDecision = true;
                alt4 = dfa4.predict(input);
            }
            catch (NoViableAltException nvae) {
                dbg.recognitionException(nvae);
                throw nvae;
            }
            } finally {dbg.exitDecision(4);}

            switch (alt4) {
                case 1 :
                    dbg.enterAlt(1);

                    // /home/cesar/UFSC/Compiladores/FINAL/javax.g:29:2: varatrib SEMI
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(29,2);
                    pushFollow(FOLLOW_varatrib_in_weakstat93);
                    varatrib6=varatrib();

                    state._fsp--;

                    adaptor.addChild(root_0, varatrib6.getTree());
                    dbg.location(29,11);
                    SEMI7=(Token)match(input,SEMI,FOLLOW_SEMI_in_weakstat95); 
                    SEMI7_tree = (Object)adaptor.create(SEMI7);
                    adaptor.addChild(root_0, SEMI7_tree);


                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /home/cesar/UFSC/Compiladores/FINAL/javax.g:30:2: vardecl SEMI
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(30,2);
                    pushFollow(FOLLOW_vardecl_in_weakstat100);
                    vardecl8=vardecl();

                    state._fsp--;

                    adaptor.addChild(root_0, vardecl8.getTree());
                    dbg.location(30,14);
                    SEMI9=(Token)match(input,SEMI,FOLLOW_SEMI_in_weakstat106); 
                    SEMI9_tree = (Object)adaptor.create(SEMI9);
                    adaptor.addChild(root_0, SEMI9_tree);


                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // /home/cesar/UFSC/Compiladores/FINAL/javax.g:31:2: funccall SEMI
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(31,2);
                    pushFollow(FOLLOW_funccall_in_weakstat111);
                    funccall10=funccall();

                    state._fsp--;

                    adaptor.addChild(root_0, funccall10.getTree());
                    dbg.location(31,11);
                    SEMI11=(Token)match(input,SEMI,FOLLOW_SEMI_in_weakstat113); 
                    SEMI11_tree = (Object)adaptor.create(SEMI11);
                    adaptor.addChild(root_0, SEMI11_tree);


                    }
                    break;
                case 4 :
                    dbg.enterAlt(4);

                    // /home/cesar/UFSC/Compiladores/FINAL/javax.g:32:2: defif
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(32,2);
                    pushFollow(FOLLOW_defif_in_weakstat118);
                    defif12=defif();

                    state._fsp--;

                    adaptor.addChild(root_0, defif12.getTree());

                    }
                    break;
                case 5 :
                    dbg.enterAlt(5);

                    // /home/cesar/UFSC/Compiladores/FINAL/javax.g:33:2: deffor
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(33,2);
                    pushFollow(FOLLOW_deffor_in_weakstat126);
                    deffor13=deffor();

                    state._fsp--;

                    adaptor.addChild(root_0, deffor13.getTree());

                    }
                    break;
                case 6 :
                    dbg.enterAlt(6);

                    // /home/cesar/UFSC/Compiladores/FINAL/javax.g:34:2: defreturn SEMI
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(34,2);
                    pushFollow(FOLLOW_defreturn_in_weakstat134);
                    defreturn14=defreturn();

                    state._fsp--;

                    adaptor.addChild(root_0, defreturn14.getTree());
                    dbg.location(34,12);
                    SEMI15=(Token)match(input,SEMI,FOLLOW_SEMI_in_weakstat136); 
                    SEMI15_tree = (Object)adaptor.create(SEMI15);
                    adaptor.addChild(root_0, SEMI15_tree);


                    }
                    break;
                case 7 :
                    dbg.enterAlt(7);

                    // /home/cesar/UFSC/Compiladores/FINAL/javax.g:35:2: chestaccess SEMI
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(35,2);
                    pushFollow(FOLLOW_chestaccess_in_weakstat141);
                    chestaccess16=chestaccess();

                    state._fsp--;

                    adaptor.addChild(root_0, chestaccess16.getTree());
                    dbg.location(35,14);
                    SEMI17=(Token)match(input,SEMI,FOLLOW_SEMI_in_weakstat143); 
                    SEMI17_tree = (Object)adaptor.create(SEMI17);
                    adaptor.addChild(root_0, SEMI17_tree);


                    }
                    break;
                case 8 :
                    dbg.enterAlt(8);

                    // /home/cesar/UFSC/Compiladores/FINAL/javax.g:36:2: defrepeat
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(36,2);
                    pushFollow(FOLLOW_defrepeat_in_weakstat151);
                    defrepeat18=defrepeat();

                    state._fsp--;

                    adaptor.addChild(root_0, defrepeat18.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(36, 11);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "weakstat");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "weakstat"

    public static class block_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "block"
    // /home/cesar/UFSC/Compiladores/FINAL/javax.g:38:1: block : ( weakstat )* ;
    public final javaxParser.block_return block() throws RecognitionException {
        javaxParser.block_return retval = new javaxParser.block_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        javaxParser.weakstat_return weakstat19 = null;



        try { dbg.enterRule(getGrammarFileName(), "block");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(38, 1);

        try {
            // /home/cesar/UFSC/Compiladores/FINAL/javax.g:38:7: ( ( weakstat )* )
            dbg.enterAlt(1);

            // /home/cesar/UFSC/Compiladores/FINAL/javax.g:38:9: ( weakstat )*
            {
            root_0 = (Object)adaptor.nil();

            dbg.location(38,9);
            // /home/cesar/UFSC/Compiladores/FINAL/javax.g:38:9: ( weakstat )*
            try { dbg.enterSubRule(5);

            loop5:
            do {
                int alt5=2;
                try { dbg.enterDecision(5, decisionCanBacktrack[5]);

                int LA5_0 = input.LA(1);

                if ( (LA5_0==NAME||LA5_0==IFSTAT||LA5_0==FORSTAT||LA5_0==REPEATSTAT||LA5_0==TYPE||LA5_0==RETURNSTAT) ) {
                    alt5=1;
                }


                } finally {dbg.exitDecision(5);}

                switch (alt5) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/cesar/UFSC/Compiladores/FINAL/javax.g:38:10: weakstat
            	    {
            	    dbg.location(38,10);
            	    pushFollow(FOLLOW_weakstat_in_block160);
            	    weakstat19=weakstat();

            	    state._fsp--;

            	    adaptor.addChild(root_0, weakstat19.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);
            } finally {dbg.exitSubRule(5);}


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(38, 20);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "block");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "block"

    public static class varatrib_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "varatrib"
    // /home/cesar/UFSC/Compiladores/FINAL/javax.g:40:1: varatrib : ( NAME | chestaccess ) ASSIGN expr ;
    public final javaxParser.varatrib_return varatrib() throws RecognitionException {
        javaxParser.varatrib_return retval = new javaxParser.varatrib_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token NAME20=null;
        Token ASSIGN22=null;
        javaxParser.chestaccess_return chestaccess21 = null;

        javaxParser.expr_return expr23 = null;


        Object NAME20_tree=null;
        Object ASSIGN22_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "varatrib");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(40, 1);

        try {
            // /home/cesar/UFSC/Compiladores/FINAL/javax.g:40:10: ( ( NAME | chestaccess ) ASSIGN expr )
            dbg.enterAlt(1);

            // /home/cesar/UFSC/Compiladores/FINAL/javax.g:40:12: ( NAME | chestaccess ) ASSIGN expr
            {
            root_0 = (Object)adaptor.nil();

            dbg.location(40,12);
            // /home/cesar/UFSC/Compiladores/FINAL/javax.g:40:12: ( NAME | chestaccess )
            int alt6=2;
            try { dbg.enterSubRule(6);
            try { dbg.enterDecision(6, decisionCanBacktrack[6]);

            int LA6_0 = input.LA(1);

            if ( (LA6_0==NAME) ) {
                int LA6_1 = input.LA(2);

                if ( (LA6_1==ASSIGN) ) {
                    alt6=1;
                }
                else if ( (LA6_1==DOT) ) {
                    alt6=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 1, input);

                    dbg.recognitionException(nvae);
                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }
            } finally {dbg.exitDecision(6);}

            switch (alt6) {
                case 1 :
                    dbg.enterAlt(1);

                    // /home/cesar/UFSC/Compiladores/FINAL/javax.g:40:13: NAME
                    {
                    dbg.location(40,13);
                    NAME20=(Token)match(input,NAME,FOLLOW_NAME_in_varatrib171); 
                    NAME20_tree = (Object)adaptor.create(NAME20);
                    adaptor.addChild(root_0, NAME20_tree);


                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /home/cesar/UFSC/Compiladores/FINAL/javax.g:40:20: chestaccess
                    {
                    dbg.location(40,20);
                    pushFollow(FOLLOW_chestaccess_in_varatrib175);
                    chestaccess21=chestaccess();

                    state._fsp--;

                    adaptor.addChild(root_0, chestaccess21.getTree());

                    }
                    break;

            }
            } finally {dbg.exitSubRule(6);}

            dbg.location(40,33);
            ASSIGN22=(Token)match(input,ASSIGN,FOLLOW_ASSIGN_in_varatrib178); 
            ASSIGN22_tree = (Object)adaptor.create(ASSIGN22);
            adaptor.addChild(root_0, ASSIGN22_tree);

            dbg.location(40,40);
            pushFollow(FOLLOW_expr_in_varatrib180);
            expr23=expr();

            state._fsp--;

            adaptor.addChild(root_0, expr23.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(40, 44);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "varatrib");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "varatrib"

    public static class vardecl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };
